[package]
name = "miniaturo"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
description = "A RAW image thumbnailer."
edition = "2018"
license = "GPL-3.0+"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["std", "derive", "help", "usage", "cargo", "error-context", "wrap_help"], default-features = false }
image = { version = "0.24", features = ["png", "jpeg", "tiff"], default-features = false }
libopenraw-rs = { git = "https://gitlab.freedesktop.org/libopenraw/libopenraw-rs.git", rev = "f992e4ffd132dde852226bd13af1ea6d0a15e42e" }

[dev-dependencies]
assert_cmd = "1"

[profile.dev]
opt-level = 2  # Optimize even in debug mode, since otherwise image operations are painfully slow

[profile.release]
lto = true
