[package]
name = "miniaturo"
version = "0.5.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
description = "A RAW image thumbnailer."
edition = "2021"
license = "GPL-3.0+"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["std", "derive", "help", "usage", "cargo", "error-context", "wrap_help"], default-features = false }
image = { version = "0.24", features = ["png", "jpeg", "tiff"], default-features = false }
libopenraw = "0.1.1"

[dev-dependencies]
assert_cmd = "2"

[profile.dev]
opt-level = 2  # Optimize even in debug mode, since otherwise image operations are painfully slow

[profile.release]
lto = true
