[package]
name = "miniaturo"
description = "A RAW image thumbnailer. Intended to be a drop-in replacement for the (mostly unmaintained) raw-thumbnailer project."
version = "0.6.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
documentation = "https://docs.rs/miniaturo"
repository = "https://github.com/dbrgn/miniaturo"
license = "GPL-3.0+"
categories = ["command-line-utilities", "multimedia::images"]
keywords = ["raw", "thumbnailer", "thumbnails", "libopenraw"]
edition = "2021"
include = [
    "**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE.md",
]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["std", "derive", "help", "usage", "cargo", "error-context", "wrap_help"], default-features = false }
image = { version = "0.24", features = ["png", "jpeg", "tiff"], default-features = false }
libopenraw = "0.4.0-alpha.2"

[dev-dependencies]
assert_cmd = "2"

[profile.dev]
opt-level = 2  # Optimize even in debug mode, since otherwise image operations are painfully slow

[profile.release]
lto = true